<resources>
    <string name="app_name">cobaChatapp</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>

    <string name="label_sign_up">Sign Up</string>
    <string name="label_log_in">Login</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_log_in">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_solution">Ask your any question for Expert and get Solution for your Problem</string>
</resources>